# jasper-designer-v2

./: .eslintignore  .eslintrc.cjs  .gitignore  AGENTS.md  API.md  BUILD_OPTIMIZATION.md  CLAUDE.md  DEBUGGING-GUIDE.md  DRAG_JUMP_FIX_REPORT.md  DRAG_SELECTION_FIX.md  EMAIL_SETUP.md  FINAL_FIX_SUMMARY.md  GITHUB_ACTIONS_OPTIMIZATION.md  GITHUB_ACTIONS_SETUP_GUIDE.md  GITHUB_SETUP.md  INTERACTION_ARCHITECTURE.md  INTERACTION_INTEGRATION_GUIDE.md  INTERACTION_REFACTOR_PLAN.md  M2_COMPLETION_SUMMARY.md  M2_SELECTION_FEATURES.md  M2_TESTING_GUIDE.md  PHASE1_IMPLEMENTATION_GUIDE.md  PREVIEW_INTERFACES.md  PREVIEW_MODE_DESIGN.md  PREVIEW_MODE_FIX.md  PREVIEW_MODE_IMPLEMENTATION.md  PREVIEW_ROADMAP.md  PROGRESS.md  PUSH_TO_GITHUB.md  README.md  RENDER_EXPORT_TASKS.md  RESIZE_OPTIMIZED_RELEASE_NOTES.md  ROADMAP.md  TESTING_GUIDE.md  build-debug.sh  build-manager.sh  bulletproof-self-check.js  index.html  integration-completion-report.js  mysql_proxy.py  (+22 more)
.github/: ci-test.txt
backend/: pom.xml
docs/: ARCHITECTURE_REFACTORING.md  DESIGN_GUIDE.md  INDEX.md  RENDERING_ARCHITECTURE.md  SKIA_MIGRATION.md  deployment-summary.md  design-document.md  frontend-rendering-analysis.md  integration-test-verification.md  phase21-implementation-report.md  project-setup-summary.md  ui-demo-screenshots.md  ui-design-mockups.md  v2-architecture-design.md
frontend/: package.json  tailwind.config.js  vite.config.ts
scripts/: README.md  add-final-docs.sh  auto-commit.sh  auto-push-to-windows.sh  auto-sync-to-share.sh  build-alignment-feature.sh  build-all.sh  build-windows.sh  check-env.sh  cleanup-old.sh  create-safe-package.sh  package-final.sh  package.sh  quick-share-setup.sh  setup-sccache.sh  setup-syncthing.sh  setup-windows-share.sh  (+1 more)
src/: App.tsx  (+3 more)
src-tauri/: Cargo.toml  README-20250809-173033.md  rust_out  tauri.conf.json
src-tauri/builds/windows/jasper-designer-v2-resize-fixed-20250809-211024/: run-jasper.bat
src-tauri/jasper-designer-v2-windows-fixed-drag-20250808-123100/: README-DRAG-FIX.md  run-jasper.bat
src-tauri/jasper-designer-v2-windows-fixed-drag-20250808-123100/assets/: index-BOxrC_SS.css  index-Cs-NDO92.js
src-tauri/src/: errors.rs  main.rs
src-tauri/src/adapters/: api_adapter.rs
src-tauri/src/commands/: canvas.rs  element.rs  file.rs  history.rs  mod.rs  render.rs  skia_export.rs  template.rs
src-tauri/src/core/: canvas.rs  element.rs  errors.rs  mod.rs  models.rs  renderer_pool.rs  renderer_trait.rs  template.rs  template_service.rs
src-tauri/src/data/: commands.rs  database_simple.rs  mod.rs  registry.rs  types.rs
src-tauri/src/data/providers/: json.rs  mod.rs
src-tauri/src/data/providers/database/: config.rs  mod.rs  provider.rs  source.rs  types.rs  utils.rs
src-tauri/src/data/storage/: config_storage.rs  mod.rs
src-tauri/src/data/utils/: expression.rs  mod.rs  validation.rs
src-tauri/src/preview/: cache.rs  commands.rs  manager.rs  mod.rs  quality.rs  renderer.rs  svg_converter.rs  tests.rs
src-tauri/src/preview/formats/: excel.rs  image.rs  mod.rs
src-tauri/src/preview/formats/pdf/: config.rs  font_manager.rs  mod.rs  page_builder.rs  renderer.rs  svg_to_pdf.rs  tests.rs
src-tauri/src/renderer/: mod.rs  types.rs
src-tauri/src/renderer/core/: mod.rs  skia_renderer.rs  skia_renderer_v2.rs
src-tauri/src/renderer/export/: mod.rs  office_exporter.rs
src-tauri/src/renderer/utils/: error.rs  logger.rs  mod.rs
src-tauri/src/types/: mod.rs  preview_types.rs
v2-tauri/src-tauri/: Cargo.toml  tauri.conf.json
v2-tauri/src-tauri/src/: errors.rs  main.rs
v2-tauri/src-tauri/src/commands/: element.rs  file.rs  mod.rs
v2-tauri/src-tauri/src/core/: element.rs  history.rs  state.rs
(+439 files in other folders)
