[package]
name = "jasper-designer"
version = "2.0.0"
description = "Jasper Report Designer V2.0"
authors = ["Jasper Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = [ "shell-open", "dialog-ask", "dialog-confirm", "dialog-message", "dialog-open", "dialog-save", "fs-copy-file", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-dir", "fs-remove-file", "fs-rename-file", "fs-write-file", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize", "devtools"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tracing = "0.1"

# Database dependencies - 优化版本（默认只启用MySQL）
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "json"] }
mysql = "24.0"

# 可选数据库支持 - 按需启用
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "postgres", "sqlite", "chrono", "uuid", "json"] }
regex = "1.0"

[dev-dependencies]
tempfile = "3.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"   # 优化体积
lto = true        # 链接时优化
codegen-units = 1 # 减少代码生成单元
panic = "abort"   # 减少panic处理代码
strip = true      # 移除调试符号

[profile.release-debug]
inherits = "release"
debug = 1        # 精简调试信息
strip = false    # 保留符号表用于devtools
opt-level = "s"  # 体积优化
